; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_light_trace.c_InitTrace.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_light_trace.c_InitTrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_TNODES = common dso_local global i32 0, align 4
@tnodes = common dso_local global i32* null, align 8
@tnode_p = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitTrace() #0 {
  %1 = load i32, i32* @MAX_TNODES, align 4
  %2 = add nsw i32 %1, 1
  %3 = sext i32 %2 to i64
  %4 = mul i64 %3, 4
  %5 = trunc i64 %4 to i32
  %6 = call i32* @malloc(i32 %5)
  store i32* %6, i32** @tnodes, align 8
  %7 = load i32*, i32** @tnodes, align 8
  %8 = ptrtoint i32* %7 to i32
  %9 = add nsw i32 %8, 31
  %10 = and i32 %9, -32
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** @tnodes, align 8
  %13 = load i32*, i32** @tnodes, align 8
  store i32* %13, i32** @tnode_p, align 8
  %14 = call i32 @MakeTnode(i32 0)
  %15 = call i32 (...) @InitSurfacesForTesting()
  ret void
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @MakeTnode(i32) #1

declare dso_local i32 @InitSurfacesForTesting(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
